fixes overflow bugs

--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,6 @@ textarea{
     }
 
     .form form input, .form form textarea{
-        width: 368px;
+        width: 340px;
     }
 }
